--- a/Task13/WebContent/templates/admin/css/style.css
+++ b/Task13/WebContent/templates/admin/css/style.css
@@ -176,3 +176,31 @@ button.btn-edit {
 	cursor: pointer;
 	width: 250px;
 }
+
+
+/*Submission page*/
+.submission {
+	width: 100%;
+	/*border: none;*/
+}
+
+.pagination {
+    display: inline-block;
+}
+
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+}
+
+.pagination a.active {
+    background-color: #6993D2;
+    color: white;
+    border: 1px solid #6993D2;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
