--- a/Task13/WebContent/templates/public/css/style.css
+++ b/Task13/WebContent/templates/public/css/style.css
@@ -1,21 +1,25 @@
 /*===============================================
 GLOBAL CSS
 ===============================================*/
-* {
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
+
+h1, h2, h3, h4, h5, h6, ul, li, p {
+	margin: 0;
+	padding: 0;
 }
-*{margin:0; padding: 0;}
-* {margin: 0; padding: 0;}
-h1,h2,h3,h4,h5,h6,ul,li,p {margin: 0; padding: 0;}
-li {list-style: none; float: left;}
-a{text-decoration: none}
+
+li {
+	list-style: none;
+	float: left;
+}
+
+a {
+	text-decoration: none
+}
+
 .row {
 	margin: 0px;
 	padding: 0px;
 }
-
 
 /*===============================================
 GENERAL CSS
@@ -24,11 +28,11 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	color: #666;
+	margin: 0px;
 }
 
 .container-max {
 	background: #000;
-	box-shadow: 0px 0px 30px 0px #000000;
 	padding: 0px;
 	margin-left: auto;
 	margin-right: auto;
@@ -40,19 +44,48 @@ body {
 	border: none;
 	border-radius: 0px;
 	width: 100%;
-	height: 100%;
+	height: 70px;
 	background-image: linear-gradient(0deg, #2360B9, #6C95D3);
 	text-align: center;
 	color: #fff;
 	margin: 0px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	position: relative;
 }
+
+.header-title .top-link {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+	width: 300px;
+}
+
+.header-title .top-link  a {
+	color: white;
+	text-decoration: none;
+}
+
+.header-title .logo {
+	display: block;
+	position: absolute;
+	float: left;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.header-title .logo img {
+	display: block;
+	height: 40px;
+}
+
 .header-title h4 {
 	margin: 0px;
 	font-weight: bold;
 	padding: 5px;
 }
+
 .header-title p {
 	margin: 0px;
 	text-align: center;
@@ -61,6 +94,7 @@ body {
 }
 
 .header-image {
+	display: block;
 	height: 250px;
 }
 
@@ -72,18 +106,20 @@ body {
 .main-content {
 	background-image: linear-gradient(90deg, #DEEAF6, #fff);
 	display: block;
-	position:relative;
-	overflow:auto;
+	position: relative;
+	overflow: auto;
 }
 /*menu*/
 .content-left {
 	float: left;
 	width: 22%;
 }
+
 #menu {
 	padding-top: 5px;
 	padding-left: 20px;
 }
+
 #menu ul li {
 	font-size: 14px;
 	font-weight: bold;
@@ -96,6 +132,7 @@ body {
 	background-image: linear-gradient(0deg, #0448A5, #6795D3);
 	padding: 5px;
 }
+
 #menu ul li a {
 	text-decoration: none;
 	color: white;
@@ -103,8 +140,8 @@ body {
 }
 
 #menu ul li:hover {
-	background-image: linear-gradient(#95BEEA, #3C6FB0,  #95BEEA);
-} 
+	background-image: linear-gradient(#95BEEA, #3C6FB0, #95BEEA);
+}
 
 #menu ul li ul li a {
 	text-decoration: none;
@@ -123,15 +160,15 @@ body {
 }
 
 #menu ul li ul li {
-	background-image: linear-gradient(#95BEEA, #3C6FB0,  #95BEEA);
+	background-image: linear-gradient(#95BEEA, #3C6FB0, #95BEEA);
 	margin: 0px;
 }
 
 #menu ul li ul li:hover {
-	background-image: linear-gradient(#AAD3EF, #95BEEA,  #AAD3EF);
+	background-image: linear-gradient(#AAD3EF, #95BEEA, #AAD3EF);
 }
 
-.main-menu-3:hover .main-menu-3-sub{
+.main-menu-3:hover .main-menu-3-sub {
 	display: block;
 }
 
@@ -140,12 +177,11 @@ body {
 	float: right;
 	width: 74%;
 	margin-top: 10px;
-	margin-right: 20px;
+	margin-right: 30px;
 	font-size: 12px;
 	text-align: left;
 	min-height: 400px;
 }
-
 
 .content-right h2 {
 	font-size: 14px;
@@ -196,15 +232,15 @@ body {
 }
 
 .content-right .box dl {
-    margin: 0px;
-    margin-left: 20px;
+	margin: 0px;
+	margin-left: 20px;
 }
 
 .content-right dl dt {
 	display: block;
 	float: left;
-    width: 11em;
-} 
+	width: 11em;
+}
 
 .content-right dl dd {
 	margin-bottom: 5px;
@@ -222,7 +258,7 @@ body {
 	text-align: center;
 	color: #fff;
 	margin: 0px;
-	padding-top: 15px; 
+	padding-top: 15px;
 	font-size: 10px;
 }
 
